# slurm-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: account.rs  recent.rs  rsinfo.rs  submit-echo.rs
slurm/: CHANGELOG.md  Cargo.toml  README.md  build.rs
slurm-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
slurm-sys/src/: lib.rs  wrapper.h
slurm/examples/: account.rs  recent.rs  rsinfo.rs  submit-echo.rs
slurm/src/: lib.rs
src/: colorio.rs  lib.rs  main.rs  recent.rs  status.rs  util.rs
