# Copyright 2017-2018 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT licene.

[package]
name = "slurmplus"
version = "0.1.3"
authors = ["Peter Williams <peter@newton.cx>"]
description = "A command-line tool for nice interaction with the Slurm workload manager."
homepage = "https://github.com/pkgw/slurm-rs"
documentation = "https://docs.rs/crate/slurmplus"
repository = "https://github.com/pkgw/slurm-rs"
readme = "README.md"
keywords = ["slurm"]
categories = ["concurrency", "science"]
license = "MIT"

[workspace]

[dependencies]
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
itertools = "0.8"
slurm = { path = "slurm", version = "0.1.3" }
structopt = "0.2"
termcolor = "1.0"
users = "0.9"

[package.metadata.docs.rs]
# Hack to get us building on docs.rs:
rustc-args = ["--cfg", "slurmrs_on_docs_rs"]
rustdoc-args = ["--cfg", "slurmrs_on_docs_rs"]
