# Copyright 2017-2018 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "slurm-sys"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
links = "slurm"
build = "build.rs"
description = """ 
Low-level bindings to the `libslurm` and `libslurmdb` libraries. These
libraries provide access to [Slurm](https://slurm.schedmd.com/), a workload
manager system for scheduling and running jobs on large computing clusters. It
is often used in scientific HPC (high-performance computing) contexts.
"""
homepage = "https://github.com/pkgw/slurm-rs"
documentation = "https://docs.rs/slurm-sys"
repository = "https://github.com/pkgw/slurm-rs"
readme = "README.md"
keywords = ["slurm"]
categories = ["concurrency", "external-ffi-bindings", "science"]
license = "MIT"

[build-dependencies]
bindgen = "0.33"
pkg-config = "^0.3"

[package.metadata.docs.rs]
dependencies = ["libslurm-dev", "libslurmdb-dev"]
