# Copyright 2017-2018 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "slurm-sys"
version = "0.1.2"
authors = ["Peter Williams <peter@newton.cx>"]
links = "slurm"
build = "build.rs"
description = "Low-level FFI bindings to the libslurm and libslurmdb libraries."
homepage = "https://github.com/pkgw/slurm-rs"
documentation = "https://docs.rs/slurm-sys"
repository = "https://github.com/pkgw/slurm-rs"
readme = "README.md"
keywords = ["slurm"]
categories = ["concurrency", "external-ffi-bindings", "science"]
license = "MIT"

[build-dependencies]
bindgen = "0.35"
pkg-config = "^0.3"

[package.metadata.docs.rs]
# Hack to get us building on docs.rs:
rustc-args = ["--cfg", "slurmrs_on_docs_rs"]
rustdoc-args = ["--cfg", "slurmrs_on_docs_rs"]
