# Copyright 2017-2018 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT licene.

[package]
name = "slurm"
version = "0.1.3"
authors = ["Peter Williams <peter@newton.cx>"]
description = "Interface to the Slurm workload manager."
homepage = "https://github.com/pkgw/slurm-rs"
documentation = "https://docs.rs/slurm"
repository = "https://github.com/pkgw/slurm-rs"
readme = "README.md"
keywords = ["slurm"]
categories = ["concurrency", "science"]
license = "MIT"

[dependencies]
chrono = "0.4"
clap = "2.34"
failure = "0.1"
failure_derive = "0.1"
itertools = "0.14"
libc = "0.2"
slurm-sys = { path = "../slurm-sys", version = "0.1.3" }

[build-dependencies]
slurm-sys = { path = "../slurm-sys", version = "0.1.3" } # needed to learn what C API provides

[package.metadata.docs.rs]
# Hack to get us building on docs.rs:
rustc-args = ["--cfg", "slurmrs_on_docs_rs"]
rustdoc-args = ["--cfg", "slurmrs_on_docs_rs"]
